analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/topLevelDestructuringDeclarationEntryMutable.kt
// LOOK_UP_FOR_ELEMENT_OF_TYPE: KtDestructuringDeclarationEntry
// DO_NOT_CHECK_SYMBOL_RESTORE
// IGNORE_FE10

data class X(val a: Int, val b: Int)

var (<expr>a</expr>, b) = X(1, 2)
